--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,20 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 html,
+body {
+  margin: 0;
+}
 body {
   padding: 0;
   margin: 0;
   width: 100vw;
   height: 100vh;
+  background-color: rgb(15 23 42);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+/* html,
 
 a {
   color: inherit;
@@ -25,4 +33,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
